# 0x-cli

./: .gitignore  CLAUDE_SKILL.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
skills/0x-trade/: SKILL.md
skills/0x-trade/references/: config.md  cross-chain.md  errors.md  gasless.md  solana.md  tokens.md
src/: cli.rs  confirm.rs  error.rs  lib.rs  main.rs  telemetry.rs  token_cache.rs
src/api/: cross_chain.rs  evm_swap.rs  gasless.rs  mod.rs  poll.rs  solana_swap.rs  types.rs
src/chain/: evm.rs  mod.rs  retry.rs  solana.rs  tron.rs
src/commands/: chains.rs  config_cmd.rs  cross_chain.rs  gasless.rs  mod.rs  price.rs  skill.rs  solana_swap.rs  status.rs  swap.rs
src/commands/cross_chain/: mod.rs  output.rs  select.rs
src/commands/gasless/: eip712.rs  mod.rs  output.rs
src/config/: mod.rs  types.rs
src/output/: envelope.rs  human.rs  mod.rs  trade.rs
src/payment/: mod.rs  mpp.rs  x402.rs
src/wallet/: evm.rs  keyring_store.rs  mod.rs  solana.rs  tron.rs
tests/: cli_output.rs
