[package]
name = "zero-x-cli"
version = "0.1.0"
edition = "2021"
description = "Trade tokens across chains using 0x APIs"
license = "MIT"

[lib]
name = "zero_x_cli"
path = "src/lib.rs"

[[bin]]
name = "0x"
path = "src/bin/cli.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Precise rate arithmetic for compute_rate
bigdecimal = "0.4"

# EVM
alloy = { version = "1", features = [
    "signers",
    "signer-local",
    "provider-http",
    "network",
    "rpc-types",
    "sol-types",
    "contract",
] }
alloy-dyn-abi = { version = "1", features = ["eip712"] }

# Solana
solana-sdk = "2"
solana-client = "2"
# Not used directly: solana-sdk's secp256r1 precompile pulls in the `openssl`
# crate. Depending on it here with `vendored` forces OpenSSL to build from
# bundled source across the whole graph, so the binary needs no system OpenSSL
# at build or runtime on any platform (notably Windows, whose runner has none).
openssl = { version = "0.10", features = ["vendored"] }

# Error handling
thiserror = "2"

# Output & UX
colored = "3"
comfy-table = "7"
dialoguer = "0.12"
indicatif = "0.17"

# Utilities
dirs = "6"
base64 = "0.22"
hex = "0.4"
bs58 = "0.5"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

# OS keyring for wallet secrets.
# Linux uses the pure-Rust Secret Service backend (zbus + RustCrypto) rather
# than `sync-secret-service`, which would link the system `libdbus` C library —
# this keeps the build and the shipped binary free of any system dependency.
# `async-io` runs zbus on its own executor so the (sync) keyring calls don't
# nest a runtime inside our tokio main.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "async-secret-service",
    "crypto-rust",
    "async-io",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
# Strip symbols + debuginfo from shipped binaries — smaller downloads. The
# tradeoff: crash backtraces from a release binary show addresses, not function
# names. Acceptable for distribution; use a debug/dev build to symbolicate.
strip = true
